Added some templating

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "private": true,
   "devDependencies": {
-    "gulp": "3.9.1"
+    "gulp": "3.9.1",
+    "gulp-nunjucks-render": "2.0.0" 
   },
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
