Added a clean target

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "devDependencies": {
     "gulp": "3.9.1",
-    "gulp-nunjucks-render": "2.0.0" 
+    "gulp-nunjucks-render": "2.0.0",
+    "gulp-clean" : "0.3.2" 
   },
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
