--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "gulp": "3.9.1",
     "gulp-nunjucks-render": "2.0.0",
     "gulp-clean": "0.3.2",
-    "gulp-data" : "1.2.1"
+    "gulp-data": "1.2.1",
+    "gulp-rename": "1.2.2",
+    "babel-core": "6.24.0",
+    "babel-preset-env":  "1.3.2" 
   },
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
