Added knockout as a node dependency again

--- a/src/Portfolio.Web/package.json
+++ b/src/Portfolio.Web/package.json
@@ -14,10 +14,11 @@
  },
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
-    "font-awesome": "4.7.0"
+    "font-awesome": "4.7.0",
+    "knockout": "3.4.2"
   },
   "scripts": {
     "postinstall": "gulp restore"
   },
   "repository": {}
-}
+} 
