--- a/src/Portfolio.Web/package.json
+++ b/src/Portfolio.Web/package.json
@@ -14,11 +14,10 @@
  },
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
-    "font-awesome": "4.7.0",
-    "knockout": "3.4.2"
+    "font-awesome": "4.7.0"
   },
   "scripts": {
     "postinstall": "gulp restore"
   },
   "repository": {}
-} 
+}
