experience using bulma

--- a/src/Portfolio.Web/package.json
+++ b/src/Portfolio.Web/package.json
@@ -5,15 +5,16 @@
   "private": true,
   "devDependencies": {
     "gulp": "3.9.1",
-    "gulp-nunjucks-render": "2.0.0",
     "gulp-clean": "0.3.2",
     "gulp-data": "1.2.1",
+    "gulp-environments": "0.1.2",
+    "gulp-nunjucks-render": "2.0.0",
     "gulp-rename": "1.2.2",
-    "merge-stream": "1.0.1",
-    "gulp-environments": "0.1.2"
- },
+    "merge-stream": "1.0.1"
+  },
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
+    "bulma": "^0.7.2",
     "font-awesome": "4.7.0"
   },
   "scripts": {
