Fixed up github icons

--- a/src/Portfolio.Web/package.json
+++ b/src/Portfolio.Web/package.json
@@ -13,9 +13,9 @@
     "merge-stream": "1.0.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.1",
     "bootstrap": "4.0.0-alpha.6",
-    "bulma": "^0.7.2",
-    "font-awesome": "4.7.0"
+    "bulma": "^0.7.2"
   },
   "scripts": {
     "postinstall": "gulp restore"
