--- a/src/Portfolio.Web/package.json
+++ b/src/Portfolio.Web/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.1",
     "bootstrap": "4.0.0-alpha.6",
-    "bulma": "^0.7.2"
+    "bulma": "^0.7.2",
+    "vue": "2.6.10"
   },
   "scripts": {
     "postinstall": "gulp restore"
