--- a/Portfolio/Portfolio.Web/package.json
+++ b/Portfolio/Portfolio.Web/package.json
@@ -4,15 +4,15 @@
   "description": "",
   "private": true,
   "devDependencies": {
-    "gulp": "3.9.1",
-    "gulp-clean": "0.3.2",
-    "gulp-data": "1.2.1",
-    "gulp-environments": "0.1.2",
-    "gulp-nunjucks-render": "2.0.0",
-    "gulp-rename": "1.2.2",
-    "merge-stream": "1.0.1",
+    "gulp": "4.0.2",
+    "gulp-data": "1.3.1",
+    "gulp-environments": "1.0.0",
+    "gulp-nunjucks-render": "2.2.3",
+    "gulp-rename": "2.0.0",
+    "merge-stream": "2.0.0",
     "replacestream": "4.0.3",
-    "through2":  "3.0.1" 
+    "through2":  "3.0.1",
+    "del": "^5.1.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.1",
