Added dockerfile for the API

--- a/Portfolio/Portfolio.Web/Dockerfile
+++ b/Portfolio/Portfolio.Web/Dockerfile
@@ -5,11 +5,10 @@ WORKDIR /build/src
 COPY . .
 
 RUN yarn install --frozen-lockfile
-#RUN yarn build
-RUN yarn run gulp distLocal
+RUN yarn build
 
 RUN mkdir -p /build/out
-RUN cp -r ./dist-local/* /build/out
+RUN cp -r ./dist/* /build/out
 
 FROM nginx:alpine as runtime
 
